--- a/index.html
+++ b/index.html
@@ -1,16 +1,273 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Tulsi Bhoi - Portfolio</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Tulsi Bhoi — Portfolio</title>
+
+  <!-- Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Simple metadata -->
+  <meta name="description" content="Tulsi Bhoi — Web Developer. Portfolio showcasing projects, skills, and contact." />
+
   <style>
-    body { font-family: Arial; background: #f9f9f9; text-align: center; }
-    h1 { color: #222; margin-top: 50px; }
-    p { color: #555; }
+    /* small extra styles */
+    html { scroll-behavior: smooth; }
+    /* floating round photo */
+    .profile-ring {
+      border-width: 6px;
+      border-style: solid;
+      border-image: linear-gradient(45deg,#60a5fa,#7c3aed) 1;
+    }
+    /* subtle reveal animation */
+    .reveal { opacity:0; transform: translateY(14px); transition: all .6s ease-out; }
+    .reveal.visible { opacity:1; transform: translateY(0); }
   </style>
 </head>
-<body>
-  <h1>Hello, I'm Tulsi Bhoi</h1>
-  <p>Welcome to my portfolio website!</p>
+<body class="bg-gray-50 text-gray-800 font-sans leading-relaxed">
+
+  <!-- NAV -->
+  <header class="fixed top-0 left-0 right-0 bg-white/80 backdrop-blur-sm shadow-sm z-30">
+    <div class="container mx-auto px-6 py-3 flex items-center justify-between">
+      <a href="#home" class="flex items-center gap-3">
+        <div class="w-10 h-10 rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-bold">TB</div>
+        <span class="font-semibold text-lg">Tulsi Bhoi</span>
+      </a>
+
+      <nav class="hidden md:flex gap-6 text-sm">
+        <a href="#about" class="hover:text-blue-600">About</a>
+        <a href="#projects" class="hover:text-blue-600">Projects</a>
+        <a href="#skills" class="hover:text-blue-600">Skills</a>
+        <a href="#contact" class="hover:text-blue-600">Contact</a>
+      </nav>
+
+      <div class="md:hidden">
+        <button id="menu-btn" aria-label="menu" class="p-2 rounded-md hover:bg-gray-100">☰</button>
+      </div>
+    </div>
+  </header>
+
+  <!-- MOBILE MENU -->
+  <div id="mobile-menu" class="hidden fixed inset-x-0 top-16 bg-white shadow-md z-40">
+    <div class="px-6 py-4 flex flex-col gap-2">
+      <a href="#about" class="py-2">About</a>
+      <a href="#projects" class="py-2">Projects</a>
+      <a href="#skills" class="py-2">Skills</a>
+      <a href="#contact" class="py-2">Contact</a>
+    </div>
+  </div>
+
+  <!-- HERO -->
+  <main class="pt-20">
+    <section id="home" class="min-h-[72vh] grid items-center">
+      <div class="container mx-auto px-6 grid md:grid-cols-2 gap-8 items-center">
+        <div class="space-y-6">
+          <p class="text-sm text-blue-600 font-medium">Hello — I’m</p>
+          <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">Tulsi Bhoi</h1>
+          <p class="text-lg max-w-xl text-gray-700">
+            I build clean, responsive websites and web apps. I enjoy turning ideas into delightful user experiences using HTML, CSS, JavaScript and modern tools.
+          </p>
+
+          <div class="flex items-center gap-4">
+            <a href="#projects" class="inline-flex items-center gap-2 bg-blue-600 text-white px-5 py-3 rounded-full shadow hover:opacity-95">View Projects →</a>
+            <a href="#contact" class="inline-flex items-center gap-2 border border-gray-200 px-4 py-3 rounded-full hover:bg-gray-50">Contact</a>
+          </div>
+
+          <div class="flex gap-3 text-sm text-gray-600">
+            <div class="flex items-center gap-2">
+              <strong class="text-gray-800">Location</strong>
+              <span>India</span>
+            </div>
+            <div class="flex items-center gap-2">
+              <strong class="text-gray-800">Email</strong>
+              <a href="mailto:yourname@example.com" class="text-blue-600">yourname@example.com</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex justify-center md:justify-end">
+          <!-- Replace with your image: keep 300x300 recommended -->
+          <div class="w-64 h-64 md:w-72 md:h-72 rounded-full bg-gradient-to-br from-white to-gray-100 profile-ring flex items-center justify-center overflow-hidden shadow-lg">
+            <!-- REPLACE src with your photo file in repo, e.g. "me.jpg" -->
+            <img id="profile-img" src="https://via.placeholder.com/320" alt="Tulsi Bhoi" class="w-full h-full object-cover"/>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section id="about" class="py-16">
+      <div class="container mx-auto px-6">
+        <div class="grid md:grid-cols-3 gap-8 items-center">
+          <div class="md:col-span-2 reveal">
+            <h2 class="text-3xl font-bold mb-4">About Me</h2>
+            <p class="text-gray-700 mb-4">
+              I’m Tulsi — a web developer focused on building responsive, accessible, and user-friendly websites. I like learning new web technologies and turning designs into working products.
+            </p>
+            <p class="text-gray-700">
+              I have experience with HTML, CSS, JavaScript and frameworks. I love problem solving, collaborating with teams, and making interfaces that users enjoy.
+            </p>
+            <div class="mt-6 flex gap-3">
+              <a href="#projects" class="px-4 py-2 rounded-md border border-gray-200">See Projects</a>
+              <a href="#contact" class="px-4 py-2 rounded-md bg-blue-600 text-white">Hire Me</a>
+            </div>
+          </div>
+
+          <div class="reveal">
+            <h3 class="text-xl font-semibold mb-3">Quick facts</h3>
+            <ul class="space-y-3 text-gray-700">
+              <li>🎓 Learning & building every day</li>
+              <li>💡 Focus: Front-end & UI</li>
+              <li>🛠️ Tools: HTML • CSS • JS • Git • VSCode</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- PROJECTS -->
+    <section id="projects" class="py-16 bg-white">
+      <div class="container mx-auto px-6">
+        <h2 class="text-3xl font-bold text-center mb-8">Projects</h2>
+
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+          <!-- PROJECT CARD 1 -->
+          <article class="bg-gray-50 rounded-xl shadow-sm overflow-hidden reveal">
+            <a href="#" class="block">
+              <img src="https://via.placeholder.com/800x450" alt="Project 1" class="w-full h-44 object-cover"/>
+              <div class="p-4">
+                <h3 class="font-semibold text-lg">Project One</h3>
+                <p class="text-sm text-gray-600 mt-2">A responsive website built with HTML, CSS and JavaScript. (REPLACE with actual link)</p>
+                <div class="mt-3 flex items-center justify-between text-sm text-gray-500">
+                  <span>HTML • CSS • JS</span>
+                  <a href="#" class="text-blue-600">View →</a>
+                </div>
+              </div>
+            </a>
+          </article>
+
+          <!-- PROJECT CARD 2 -->
+          <article class="bg-gray-50 rounded-xl shadow-sm overflow-hidden reveal">
+            <a href="#" class="block">
+              <img src="https://via.placeholder.com/800x450" alt="Project 2" class="w-full h-44 object-cover"/>
+              <div class="p-4">
+                <h3 class="font-semibold text-lg">Project Two</h3>
+                <p class="text-sm text-gray-600 mt-2">Single-page app demo using JavaScript. (REPLACE with your project)</p>
+                <div class="mt-3 flex items-center justify-between text-sm text-gray-500">
+                  <span>JS • DOM</span>
+                  <a href="#" class="text-blue-600">View →</a>
+                </div>
+              </div>
+            </a>
+          </article>
+
+          <!-- PROJECT CARD 3 -->
+          <article class="bg-gray-50 rounded-xl shadow-sm overflow-hidden reveal">
+            <a href="#" class="block">
+              <img src="https://via.placeholder.com/800x450" alt="Project 3" class="w-full h-44 object-cover"/>
+              <div class="p-4">
+                <h3 class="font-semibold text-lg">Project Three</h3>
+                <p class="text-sm text-gray-600 mt-2">A small interactive UI component collection. (REPLACE with your projects)</p>
+                <div class="mt-3 flex items-center justify-between text-sm text-gray-500">
+                  <span>React • CSS</span>
+                  <a href="#" class="text-blue-600">View →</a>
+                </div>
+              </div>
+            </a>
+          </article>
+
+          <!-- Feel free to duplicate above cards for more projects -->
+        </div>
+      </div>
+    </section>
+
+    <!-- SKILLS -->
+    <section id="skills" class="py-16">
+      <div class="container mx-auto px-6">
+        <h2 class="text-3xl font-bold text-center mb-8">Skills</h2>
+
+        <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-6">
+          <div class="reveal">
+            <h3 class="font-semibold mb-3">Frontend</h3>
+            <ul class="space-y-3 text-gray-700">
+              <li>HTML • CSS • Responsive Design</li>
+              <li>JavaScript (ES6+) • DOM Manipulation</li>
+              <li>Tailwind CSS • Bootstrap</li>
+            </ul>
+          </div>
+
+          <div class="reveal">
+            <h3 class="font-semibold mb-3">Tools & Others</h3>
+            <ul class="space-y-3 text-gray-700">
+              <li>Git & GitHub</li>
+              <li>VS Code • DevTools</li>
+              <li>Basic understanding of React</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact" class="py-16 bg-white">
+      <div class="container mx-auto px-6 max-w-3xl">
+        <h2 class="text-3xl font-bold text-center mb-6">Contact Me</h2>
+        <p class="text-center text-gray-700 mb-6">Want to work together or have a question? Send an email or message on GitHub.</p>
+
+        <form action="mailto:yourname@example.com" method="post" enctype="text/plain" class="space-y-4 reveal">
+          <div class="grid md:grid-cols-2 gap-4">
+            <input required name="Name" placeholder="Your name" class="px-4 py-3 border rounded-md w-full" />
+            <input required name="Email" type="email" placeholder="you@example.com" class="px-4 py-3 border rounded-md w-full" />
+          </div>
+          <input name="Subject" placeholder="Subject" class="px-4 py-3 border rounded-md w-full" />
+          <textarea required name="Message" rows="6" placeholder="Write your message..." class="px-4 py-3 border rounded-md w-full"></textarea>
+
+          <div class="flex items-center justify-between">
+            <button type="submit" class="px-6 py-3 bg-blue-600 text-white rounded-md">Send Email</button>
+            <div class="text-sm text-gray-600">
+              Or find me on <a href="https://github.com/tulsi0209" target="_blank" class="text-blue-600">GitHub</a>.
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="py-8 bg-gray-100 mt-8">
+    <div class="container mx-auto px-6 text-center text-sm text-gray-600">
+      © <span id="year"></span> Tulsi Bhoi — Built with ❤️ • <a href="#home" class="text-blue-600">Back to top</a>
+    </div>
+  </footer>
+
+  <!-- JS -->
+  <script>
+    // Mobile menu toggle
+    const menuBtn = document.getElementById('menu-btn');
+    const mobileMenu = document.getElementById('mobile-menu');
+    menuBtn?.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
+    });
+
+    // reveal on scroll
+    function revealOnScroll() {
+      document.querySelectorAll('.reveal').forEach(el => {
+        const rect = el.getBoundingClientRect();
+        if (rect.top < (window.innerHeight - 60)) {
+          el.classList.add('visible');
+        }
+      });
+    }
+    window.addEventListener('scroll', revealOnScroll);
+    window.addEventListener('load', () => {
+      revealOnScroll();
+      document.getElementById('year').textContent = new Date().getFullYear();
+    });
+
+    // optional: replace placeholder profile image by uploading file named "me.jpg"
+    // If you put "me.jpg" in same repo, update src to "me.jpg" or change element src here:
+    // document.getElementById('profile-img').src = 'me.jpg';
+  </script>
 </body>
 </html>
