--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <div class="flex items-center gap-2">
               <strong class="text-gray-800">Email</strong>
-              <a href="mailto:yourname@example.com" class="text-blue-600">yourname@example.com</a>
+              <a href="mailto:bhoinilu057@gmail.com" class="text-blue-600">bhoinilu057@gmail.com</a>
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
           <!-- Replace with your image: keep 300x300 recommended -->
           <div class="w-64 h-64 md:w-72 md:h-72 rounded-full bg-gradient-to-br from-white to-gray-100 profile-ring flex items-center justify-center overflow-hidden shadow-lg">
             <!-- REPLACE src with your photo file in repo, e.g. "me.jpg" -->
-            <img id="profile-img" src="https://via.placeholder.com/320" alt="Tulsi Bhoi" class="w-full h-full object-cover"/>
+            <img src="C:\Users\makwa\Downloads\WhatsApp Image 2025-11-13 at 12.20.39 PM.jpg" alt="Tulsi Bhoi" class="w-full h-full object-cover"/>
           </div>
         </div>
       </div>
